// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness acp --help 1`] = `
"harness acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: harness.local)
                                                             [string] [default: "harness.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness mcp --help 1`] = `
"harness mcp

manage MCP (Model Context Protocol) servers

Commands:
  harness mcp add [name]     add an MCP server
  harness mcp list           list MCP servers and their status                     [aliases: ls]
  harness mcp auth [name]    authenticate with an OAuth-enabled MCP server
  harness mcp logout [name]  remove OAuth credentials for an MCP server
  harness mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness attach --help 1`] = `
"harness attach <url>

attach to a running harness server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to HARNESS_SERVER_PASSWORD)             [string]
  -u, --username      basic auth username (defaults to HARNESS_SERVER_USERNAME or 'harness')[string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness run --help 1`] = `
"harness run [message..]

run harness with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running harness server (e.g., http://localhost:4096)       [string]
  -p, --password     basic auth password (defaults to HARNESS_SERVER_PASSWORD)              [string]
  -u, --username     basic auth username (defaults to HARNESS_SERVER_USERNAME or 'harness') [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness debug --help 1`] = `
"harness debug

debugging and troubleshooting tools

Commands:
  harness debug config        show resolved configuration
  harness debug lsp           LSP debugging utilities
  harness debug rg            ripgrep debugging utilities
  harness debug file          file system debugging utilities
  harness debug scrap         list all known projects
  harness debug skill         list all available skills
  harness debug snapshot      snapshot debugging utilities
  harness debug startup       print startup timing
  harness debug agent <name>  show agent configuration details
  harness debug v2            debug v2 catalog and built-in plugins
  harness debug info          show debug information
  harness debug paths         show global paths (data, config, cache, state)
  harness debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness providers --help 1`] = `
"harness auth

manage AI providers and credentials

Commands:
  harness providers list               list providers and credentials              [aliases: ls]
  harness providers login [url]        log in to a provider
  harness providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness agent --help 1`] = `
"harness agent

manage agents

Commands:
  harness agent create  create a new agent
  harness agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness upgrade --help 1`] = `
"harness upgrade [target]

upgrade harness to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                  [string] [choices: "curl", "npm", "yarn", "pnpm", "bun", "brew", "choco", "scoop"]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness uninstall --help 1`] = `
"harness uninstall

uninstall harness and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness serve --help 1`] = `
"harness serve

starts a headless harness server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: harness.local)
                                                             [string] [default: "harness.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness models --help 1`] = `
"harness models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness stats --help 1`] = `
"harness stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness export --help 1`] = `
"harness export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness import --help 1`] = `
"harness import <file>

import session data from a JSON file

Positionals:
  file  path to JSON file                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness github --help 1`] = `
"harness completion          generate shell completion script
  harness acp                 start ACP (Agent Client Protocol) server
  harness mcp                 manage MCP (Model Context Protocol) servers
  harness [project]           start harness tui                                            [default]
  harness attach <url>        attach to a running harness server
  harness run [message..]     run harness with a message
  harness debug               debugging and troubleshooting tools
  harness auth                manage AI providers and credentials               [aliases: providers]
  harness agent               manage agents
  harness upgrade [target]    upgrade harness to the latest or a specific version
  harness uninstall           uninstall harness and remove all related files
  harness serve               starts a headless harness server
  harness models [provider]   list all available models
  harness stats               show token usage and cost statistics
  harness export [sessionID]  export session data as JSON
  harness import <file>       import session data from a JSON file
  harness pr                  manage pull requests
  harness session             manage sessions
  harness plugin <module>     install plugin and update config                       [aliases: plug]
  harness db                  database tools
  harness console             open or stop the local Harness Console (deprecated)
  harness roll-call <filter>  batch-test text models matching a filter for connectivity and latency
  harness daemon              manage the local harness daemon
  harness config              configuration tools
  harness worktree            manage git worktrees
  harness dev-setup           install a \`harnessdev\` shell alias for this checkout
  harness help [command]      show full CLI reference

Positionals:
  project  path to start harness in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: harness.local)
                                                             [string] [default: "harness.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --worktree      create (or reuse) a git worktree with this name and start harness there
                                                                                            [string]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness pr --help 1`] = `
"harness pr

manage pull requests

Commands:
  harness pr checkout <number>  fetch and checkout a GitHub PR branch, then run harness
  harness pr link <url>         link a session to a pull request
  harness pr unlink             clear a session's linked pull request
  harness pr status             show a session's linked pull request

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness session --help 1`] = `
"harness session

manage sessions

Commands:
  harness session list                list sessions
  harness session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness plugin --help 1`] = `
"harness plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness db --help 1`] = `
"harness db

database tools

Commands:
  harness db [query]     open an interactive sqlite3 shell or run a query                  [default]
  harness db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness mcp list --help 1`] = `
"harness mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness mcp add --help 1`] = `
"harness mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness mcp auth --help 1`] = `
"harness mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  harness mcp auth list  list OAuth-capable MCP servers and their auth status      [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness mcp logout --help 1`] = `
"harness mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness providers list --help 1`] = `
"harness providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness providers login --help 1`] = `
"harness providers login [url]

log in to a provider

Positionals:
  url  harness auth provider                                                                [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness providers logout --help 1`] = `
"harness providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness agent create --help 1`] = `
"harness agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness agent list --help 1`] = `
"harness agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness session list --help 1`] = `
"harness session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]
  -a, --all         list sessions from all projects                       [boolean] [default: false]
  -s, --search      filter sessions by title                                                [string]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness session delete --help 1`] = `
"harness session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness github install --help 1`] = `
"harness completion          generate shell completion script
  harness acp                 start ACP (Agent Client Protocol) server
  harness mcp                 manage MCP (Model Context Protocol) servers
  harness [project]           start harness tui                                            [default]
  harness attach <url>        attach to a running harness server
  harness run [message..]     run harness with a message
  harness debug               debugging and troubleshooting tools
  harness auth                manage AI providers and credentials               [aliases: providers]
  harness agent               manage agents
  harness upgrade [target]    upgrade harness to the latest or a specific version
  harness uninstall           uninstall harness and remove all related files
  harness serve               starts a headless harness server
  harness models [provider]   list all available models
  harness stats               show token usage and cost statistics
  harness export [sessionID]  export session data as JSON
  harness import <file>       import session data from a JSON file
  harness pr                  manage pull requests
  harness session             manage sessions
  harness plugin <module>     install plugin and update config                       [aliases: plug]
  harness db                  database tools
  harness console             open or stop the local Harness Console (deprecated)
  harness roll-call <filter>  batch-test text models matching a filter for connectivity and latency
  harness daemon              manage the local harness daemon
  harness config              configuration tools
  harness worktree            manage git worktrees
  harness dev-setup           install a \`harnessdev\` shell alias for this checkout
  harness help [command]      show full CLI reference

Positionals:
  project  path to start harness in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: harness.local)
                                                             [string] [default: "harness.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --worktree      create (or reuse) a git worktree with this name and start harness there
                                                                                            [string]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness github run --help 1`] = `
"harness completion          generate shell completion script
  harness acp                 start ACP (Agent Client Protocol) server
  harness mcp                 manage MCP (Model Context Protocol) servers
  harness [project]           start harness tui                                            [default]
  harness attach <url>        attach to a running harness server
  harness run [message..]     run harness with a message
  harness debug               debugging and troubleshooting tools
  harness auth                manage AI providers and credentials               [aliases: providers]
  harness agent               manage agents
  harness upgrade [target]    upgrade harness to the latest or a specific version
  harness uninstall           uninstall harness and remove all related files
  harness serve               starts a headless harness server
  harness models [provider]   list all available models
  harness stats               show token usage and cost statistics
  harness export [sessionID]  export session data as JSON
  harness import <file>       import session data from a JSON file
  harness pr                  manage pull requests
  harness session             manage sessions
  harness plugin <module>     install plugin and update config                       [aliases: plug]
  harness db                  database tools
  harness console             open or stop the local Harness Console (deprecated)
  harness roll-call <filter>  batch-test text models matching a filter for connectivity and latency
  harness daemon              manage the local harness daemon
  harness config              configuration tools
  harness worktree            manage git worktrees
  harness dev-setup           install a \`harnessdev\` shell alias for this checkout
  harness help [command]      show full CLI reference

Positionals:
  project  path to start harness in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: harness.local)
                                                             [string] [default: "harness.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --worktree      create (or reuse) a git worktree with this name and start harness there
                                                                                            [string]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`Harness CLI help-text snapshots every documented command emits stable help text: harness db path --help 1`] = `
"harness db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;
